--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<meta
 			property="og:description"
 			content="Selamat datang di halaman resmi kelas IX 3 Madrasah Tsanawiyah Negeri Parepare! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas IX 3 MTSN, yang tertarik pada Hal-Hal Aneh Dan Lainnya." />
-		<meta property="og:image" content="https://xitkj3.vercel.app/Welcome.png" />
+		<meta property="og:image" content="https://github.com/IX3PROJECT/WELCOME/blob/main/Welcome.png?raw=true" />
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
@@ -29,7 +29,7 @@
 		<meta
 			property="twitter:description"
 			content="Selamat datang di halaman resmi kelas IX 3 Madrasah Tsanawiyah Negeri Parepare! Mari mengenal lebih dekat tentang kami, siswa-siswi kelas IX 3 MTSN, yang tertarik pada Hal-Hal Aneh Dan Lainnya." />
-		<meta property="twitter:image" content="https://xitkj3.vercel.app/Welcome.png" />
+		<meta property="twitter:image" content="https://github.com/IX3PROJECT/WELCOME/blob/main/Welcome.png?raw=true" />
 	</head>
 	<body>
 		<div id="root"></div>
